--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.10",
     "swr": "^1.3.0",
     "web-vitals": "^2.1.4"
